--- a/module4/07_spring_data_jpa/thuc_hanh/quan_ly_tinh/src/main/resources/application.properties
+++ b/module4/07_spring_data_jpa/thuc_hanh/quan_ly_tinh/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=123123q
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=9090
