--- a/module4/13_i18l/bai_tap/src/main/resources/application.properties
+++ b/module4/13_i18l/bai_tap/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/smart_phone?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test_api?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123123q
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=7070
+server.port=8081
